--- a/7-Inheritance/style.css
+++ b/7-Inheritance/style.css
@@ -24,3 +24,13 @@ background-color: #fff;
     color:red;
     
 }
+.small{
+    width:60px;
+    height:20px;
+    font-size: 14px;
+}
+.large{
+    width:120px;
+    height:60px;
+    font-size: 24px;
+}
