feat(10-Flow-Management): Finish practice-2

--- a/10-Flow-Management/style.css
+++ b/10-Flow-Management/style.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 }
 .box{
-	height: 400px;
+	height: 600px;
 	width:600px;
 	border:1px solid black;
 }
@@ -10,56 +10,72 @@
 	clear:both;
 }
 .top{
-	height:300px;
+	width:600px;
+	hegith:200px;
 	border:1px solid black;
 }
-.top .left{
+.top .top-left{
 	float:left;
-
-}
-.top .left .col-1{
-	width:50px;
-	height:50px;
-	border:1px solid black;
-}
-.top .left .col-2{
-	width:50px;
-	height:250px;
-	border:1px solid black;
-}
-.top .right{
-	float:right;
+	width:300px;
+	height:200px;
 	background-color: red;
-	width: 546px;
-	height: 300px;
+}.top .top-right{
+	float:right;
+	width:298px;
+	height:200px;
+	background-color: grey;
+}
+.middle{
+	width:600px;
+	hegith:200px;
+	border:1px solid black;
+}
+.middle .middle-left{
+	float:left;
+	width:300px;
+	height:200px;
+	background-color: grey;
+}.middle .middle-right{
+	float:right;
+	width:298px;
+	height:200px;
+	background-color: grey;
 }
 .bottom{
-	height:100px;
+	width:600px;
+	hegith:200px;
 	border:1px solid black;
 }
-.bottom .left{
+.bottom .bottom-left{
+
 	float:left;
-	 width:50px;
-	 height:100px;
-	 background-color: blue;
 }
-.bottom .right{
-	
-}
-.bottom .right .col-1 {
-	width:500px;
-	height: 100px;
+.bottom .bottom-left .col-1{
+	width:100px;
+	height:197px;
 	border:1px solid black;
+	background-color: yellow;
 	float:left;
 }
-.bottom .right .col-2-2{
-	background: green;
-    float: right;
-    height: 100px;
-    width: 46px;
+.bottom .bottom-left .col-2{
+	float:right;
+	width:197px;
+	height:197px;
+	border:1px solid black;
+	background-color: grey;
 }
-.bottom .right .col-2-2 .col-2-2-2{
-	background: yellow;
-    height: 50px;
-    width: 46px;
+
+.bottom .bottom-right .col-1{
+	float:left;
+	background-color: grey;
+	width:197px;
+	height:195px;
+	border:1px solid black;
+}
+.bottom .bottom-right .col-1 .col-1-1{
+	float:left;
+	background-color: purple;
+	width:197px;
+	height:165px;
+	border:1px solid black;
 }
